# crudite

./: Dockerfile  README.md  data.json  go.mod  pyproject.toml  teas.json
.github/workflows/: go.yml
api/: README.md  teas.json
api/test/: test_tea.py
cluster/: crudite-deployment.yaml  crudite-service.yaml  instructions.md  kind-config.yaml  test-job-dns.yaml  test-job.yaml
cmd/api-server/: main.go
crudite/: main.py  tea.py
crudite/tea/: dependencies.py  models.py  router.py  store.py
csharp/Crudite/: Crudite.sln
csharp/Crudite/Crudite/: Crudite.http  ITeaRepository.cs  Program.cs  TeaRepository.cs
csharp/Crudite/Crudite.Test/: Crudite.Test.csproj  FakeTeaRepository.cs
csharp/Crudite/Crudite.Test/Controllers/: TeasControllerTests.cs
csharp/Crudite/Crudite/Controllers/: TeasController.cs
csharp/Crudite/Crudite/Models/: Tea.cs  TeaContext.cs
csharp/Crudite/Crudite/Properties/: launchSettings.json
internal/ding/: ding.go  ding_test.go
python/: README.md  requests.http
test/: test_main.py  test_tea.py
test/tea/: asserts.py  conftest.py  test_file_tea_store.py  test_router.py
